fixed content going out of bounds by adding minwidth to body

--- a/src/style.css
+++ b/src/style.css
@@ -8,6 +8,7 @@
 body {
     padding: 0%;
     margin: 0%;
+    min-width: fit-content;
 }
 header{
     background-color: black;
@@ -39,6 +40,8 @@ nav button:hover{
     flex-direction: column;
     align-items: center;
     padding-bottom: 4rem;
+
+    min-width: fit-content;
 }
 h1 {
     font-size: 6rem;
@@ -61,11 +64,12 @@ h2{
 .home-section-2{
     display: grid;
     grid-template-columns: 1.5fr 1fr;
-    grid-template-rows: 5rem auto;
+    grid-template-rows: 1fr 2fr;
     height: 25rem;
     padding: 50px;
     background-color: var(--snor-beige);
     color: var(--snor-dark-blue);
+    min-width: fit-content;
 }
 
 .home-section-2 p {
@@ -74,6 +78,7 @@ h2{
 .fake-pic{
     grid-area: 1 / 2 / span 2;
     width: 90%;
+    aspect-ratio: 3 / 4;
     height: 22rem;
     background-color: var(--snor-dark-blue);
 }
@@ -90,12 +95,13 @@ h2{
 }
 .review-collection {
     display: flex;
-    justify-content: space-evenly;
+    padding: 0% 10rem;
 }
 .review {
     display: grid;
-    grid-template-rows: 12rem 5rem;
-    width: 17rem;
+    grid-template-rows: max(12rem, fit-content) 5rem;
+    width: 60%;
+    min-width: 15rem;
     margin: 1rem 5rem;
 }
 .review-para {
